--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.1.1
   page_transition: ^2.2.1
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
