--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   flutter_bloc: ^9.1.1
   page_transition: ^2.2.1
   flutter_animate: ^4.5.2
+  http: ^1.4.0
+  flutter_dotenv: ^5.2.1
+  shimmer: ^3.0.0
+  mobkit_dashed_border: ^0.0.8
 
 dev_dependencies:
   flutter_test:
